--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyKey":  "Value of my key from appsettings.json"
 }
